<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.PhoneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_insert_number"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/text_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:text="@string/text_verify_number"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/prefix_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="@+id/code_text_input"
            app:layout_constraintEnd_toStartOf="@+id/code_text_input"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/code_text_input"
            app:prefixText="@string/text_prefix">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/prefix_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/code_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/prefix_text_input"
            app:layout_constraintTop_toBottomOf="@id/text_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:inputType="phone"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/MaterialRoundedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/action_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/code_text_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>