<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_code"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbarThumbHorizontal="@null"
    android:scrollbarThumbVertical="@null"
    tools:context=".ui.auth.CodeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_code"
            style="@style/AppTheme.Clup.TitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_verify_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/text_code"
            style="@style/AppTheme.Clup.SubtitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@id/title_code"
            app:layout_constraintStart_toStartOf="@id/title_code"
            app:layout_constraintTop_toBottomOf="@id/title_code" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/code_text_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:errorEnabled="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="8"
                android:focusableInTouchMode="true"
                android:inputType="number"
                android:maxEms="8"
                android:minEms="8"
                android:textAlignment="center"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/verify_button"
            style="@style/FilledRoundButton"
            android:layout_width="@dimen/rounded_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:text="@string/action_verify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/retry_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            style="@style/OutlinedRoundButton"
            android:layout_width="@dimen/rounded_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="@string/action_retry"
            app:layout_constraintBottom_toTopOf="@id/verify_button"
            app:layout_constraintEnd_toEndOf="@id/verify_button"
            app:layout_constraintStart_toStartOf="@id/verify_button"
            app:layout_constraintTop_toBottomOf="@id/code_text_input" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>